overflow problem:solved

--- a/src/App.scss
+++ b/src/App.scss
@@ -255,6 +255,10 @@ Note: Beware of modifying this element as it can break the animations - you shou
   }
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 #Work {
 
   .page-header {
